Beginn Rest Schnittstelle

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -80,13 +80,14 @@
     </RadioGroup>
 
     <Switch
-        android:id="@+id/switchRound"
+        android:id="@+id/switchRevert"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginBottom="16dp"
-        android:enabled="false"
-        android:text="Game"
+        android:checked="false"
+        android:onClick="revert"
+        android:text="Revert"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
