--- a/app/src/main/res/drawable/splash_screen_background.xml
+++ b/app/src/main/res/drawable/splash_screen_background.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android"
     android:opacity="opaque">
-    <item android:drawable="@color/maptrip_splash" />
+    <item android:drawable="@color/colorPrimaryDark" />
     <item>
         <bitmap
             android:gravity="center"
-            android:src="@drawable/maptrip_ii" />
+            android:src="@drawable/egs_splashscreen" />
     </item>
 </layer-list>
